--- a/Static-Resume-Builder/css/index.css
+++ b/Static-Resume-Builder/css/index.css
@@ -56,8 +56,8 @@ h1,h2,h3{
 /* ###############  Section styling ###########*/
 
 section{
-    width: 75%;
-    height: 52rem;
+    width: 768px;
+    height: 900px;
     margin: 2rem auto;
     border: 2px solid gray;
     border-radius: 1rem;
@@ -69,7 +69,7 @@ section{
 .left-div {
     border: 2px solid black;
     border-radius: 0.8rem;
-    width: 40%;
+    width: 370px;
     height: 100%;
     background-color: #2d2c2c;
     /* border-radius: 20rem; */
@@ -77,15 +77,15 @@ section{
 
 .img-div{                        /* Image Part */
     border: 3px solid white;
-    border-radius: 10rem;
+    border-radius: 12rem;
     margin: 1rem auto;
-    width: 50%;
+    width: 56%;
     height: 11.5rem;
 }
 .img-div img{
     width: 100%;
     height: 100%;
-    border-radius: 10rem;
+    border-radius: 11rem;
 }
 .about-div{                        /* About Part */
     /* border: 1px solid white; */
@@ -95,29 +95,67 @@ section{
     color: white;
     width: 90%;
 }
+.about-div h2{
+    font-size: 18px;
+    /* border: 0px solid rgb(25, 165, 208);; */
+    text-align: center;
+    width: 150px;
+    margin: auto;
+    margin-bottom: 14px;
+    border-radius: 15px;
+    padding: 5px;
+    box-shadow: 0px 1px 10px 1px rgb(52, 139, 151);
+}
 .about-para{
     font-size: 0.9rem;
 }
 .personal-div{                  /* Personal information Part */
     /* border: 1px solid white; */
     letter-spacing: 0.5px;
-    line-height: 1.3em;
-    margin: 1rem auto 0rem auto;
+    line-height: 1.5em;
+    margin: 1.6rem auto 0rem auto;
     color: white;
     width: 90%;
 }
+.personal-div h2{
+    font-size: 18px;
+    /* border: 0px solid rgb(25, 165, 208);; */
+    text-align: center;
+    width: 160px;
+    margin: auto;
+    margin-bottom: 14px;
+    border-radius: 16px;
+    padding: 5px;
+    box-shadow: 0px 1px 10px 1px rgb(52, 139, 151);
+}
+
 .personal-div ul li{
     list-style-position: inside;
+    /* border: 2px solid white; */
 }
+.personal-div li .label{
+    /* border: 2px solid green ; */
+    margin-left:-3%;
+    font-size: 15px;
+
+}
+.personal-div li .linkedin-div{
+    /* border: 4px solid aqua; */
+    margin-left: 13px;
+}
+
 .personal-div li a{
     text-decoration: none;
     color: inherit;
 }
 .personal-div .email-li a{
-    font-size: 0.9rem;
+    font-size: 0.8rem;
+    /* border: 2px solid red; */
 }
 .personal-div .linkedin-li a{
-    font-size: 0.3rem;
+    font-size: 10px;
+    font-weight: bold;
+    /* border: 2px solid red;    */
 }
 .email-li:hover,.linkedin-li:hover{
     color: rgb(101, 245, 245);
@@ -162,7 +200,7 @@ section{
 
 .information-div{
     /* border: 2px solid red; */
-    padding: 2rem 0 0 1.5rem;
+    padding: 1rem 0 0 1.5rem;
 }
 .information-div .ed-text::after{     /* Education Part */
     content: "";
@@ -170,7 +208,7 @@ section{
     border: 1.4px solid black;
     width: 7.7rem;
 }   
-.information-div .sk-text::after{        /* Skills Part */
+.information-div .sk-text::after{   /* Skills Part */ /*Separete code of all ::after reason is width of after content*/
     content: "";
     display: block;
     border: 1.4px solid black;
